[package]
name = "blinkt_cdev"
version = "0.1.0"
authors = ["mcollinge"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/mcollinge/blinkt_cdev"
repository = "https://github.com/mcollinge/blinkt_cdev"
documentation = ""
description = "Interface for Pimoroni Blinkt! for Raspberry Pi."
categories = ["embedded", "hardware-support"]
keywords = ["blinkt", "raspberry", "pi"]

[lib]
name = "blinkt_cdev"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.4.0"
anyhow = "1.0.34"

[dev-dependencies]
rand = "0.7.3"